src/objects/Threat_Tier__mdt.object
<CustomObject>
    <fields>
        <fullName>Account_Tier__c</fullName>
        <label>Account Tier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Lookup__c</fullName>
        <label>My Lookup</label>
        <referenceTo>CM_Type__mdt</referenceTo>
        <relationshipLabel>Threat Tiers</relationshipLabel>
        <relationshipName>Threat_Tiers</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Vacation__c</fullName>
        <label>Vacation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Threat Tier</label>
    <pluralLabel>Threat Tiers</pluralLabel>
</CustomObject>